--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,5 @@
 Flask==2.3.2
 gunicorn==20.1.0
-spacy==3.5.0
 openai==0.27.2
 Flask-Cors==3.0.10
 requests==2.31.0
@@ -8,3 +7,7 @@ python-dotenv==1.0.0
 requests
 beautifulsoup4
 youtube-transcript-api
+twikit 
+pandas
+langchain-core==0.3.12
+langchain-google-genai==2.0.1
