--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-markdown": "^9.0.1",
     "react-pdftotext": "^1.3.3",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-wordcloud": "^1.2.7",
     "web-vitals": "^2.1.4"
